--- a/public/css/scoreBoard.css
+++ b/public/css/scoreBoard.css
@@ -1,5 +1,5 @@
 .score-board-page {
-  background-image: url("../assets/flappybackground.jpg");
+  background-image: url("../assets/JoxxerBG.png");
 }
 
 .score-board {
