--- a/public/css/details.css
+++ b/public/css/details.css
@@ -1,3 +1,26 @@
+body {
+  background-image: url("../assets/JoxxerBG.png");
+}
+
+h1 {
+  font-size: 45px;
+  color: white;
+  text-align: center;
+  margin-top: 10%;
+}
+
+.player-details {
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.555);
+  width: fit-content;
+  height: fit-content;
+  padding: 20px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 10px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.349);
+}
 .details-form {
   width: 20rem;
   max-width: 90%;
@@ -10,16 +33,20 @@
 }
 
 .form-control label,
-.form-control input {
+.form-control input,
+.form-control p {
   display: block;
   width: 100%;
   margin-bottom: 0.25rem;
+  font-size: 18px;
+  font-weight: bold;
 }
 
 .form-control input {
   border: 1px solid #a1a1a1;
   font: inherit;
   border-radius: 2px;
+  padding: 5px 0;
 }
 
 .form-control input:focus {
@@ -27,7 +54,7 @@
 }
 
 .btn {
-  display: inline-block;
+  display: flex;
   padding: 0.25rem 1rem;
   text-decoration: none;
   font: inherit;
@@ -36,6 +63,7 @@
   background: white;
   border-radius: 3px;
   cursor: pointer;
+  align-self: center;
 }
 
 .btn:hover,
