--- a/views/details.ejs
+++ b/views/details.ejs
@@ -2,20 +2,23 @@
 <link rel="stylesheet" href="/css/details.css">
 </head>
 
-<body>    
+<body> 
+    <h1>Enter Your Details</h1>
     <main class="player-details">
+        
         <form class="details-form" action="/details/player-details" method="POST">
         <div class="form-control">
             <label for="name">Name</label>
-            <input type="text" name="name" id='name'>
+            <input type="text" name="name" id='name' required>
         </div>
         <div class="form-control">
             <label for="email">Email address</label>
-            <input type="text" name="email" id='email'>
+            <input type="text" name="email" id='email' required>
         </div>
         <div class="form-control">
-            <label for="score">Score</label>
-            <input type="text" name="score" id='score'>
+            <label for="score">Score</label> 
+            <p><%= score %> </p>
+            <input type="hidden" name="score" id='score' value='<%= score %>' >
         </div>
         <button class="btn" type="submit">Submit</button>
         </form>
