--- a/views/details.ejs
+++ b/views/details.ejs
@@ -13,7 +13,7 @@
         </div>
         <div class="form-control">
             <label for="email">Email address</label>
-            <input type="text" name="email" id='email' required>
+            <input type="email" name="email" id='email' required>
         </div>
         <div class="form-control">
             <label for="score">Score</label> 
