--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,4 +8,213 @@ body {
   padding: 0;
   margin: 0;
   font-family: "Open Sans", sans-serif;
+  background-image: url("../assets/JoxxerBG.png");
+}
+
+.menu-container {
+  width: fit-content;
+  height: fit-content;
+  position: absolute;
+  padding: 20px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.menu {
+  width: fit-content;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  margin: 20px;
+}
+
+.start-button,
+.how-to-play-button,
+.top-ten-button {
+  border: none;
+  margin-bottom: 15px;
+}
+
+.start-button:focus,
+.how-to-play-button:focus,
+.top-ten-button:focus,
+.restart-button:focus {
+  outline: none;
+}
+
+th,
+td {
+  padding: 10px;
+  text-align: center;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.scoreboard-container {
+  width: fit-content;
+  height: fit-content;
+  position: absolute;
+  padding: 20px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.scoreboard {
+  width: fit-content;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
+  color: white;
+}
+
+.scoreboard h1 {
+  font-size: 50px;
+  text-transform: uppercase;
+}
+
+.scoreboard table {
+  background-color: #429058;
+  border: 1px solid black;
+  border-radius: 3px;
+  font-size: 25px;
+  width: 512px;
+}
+
+.restart-button {
+  margin: 20px;
+  width: 200px;
+}
+
+.your-score {
+  width: 250px;
+  background-color: #429058;
+  margin-top: 20px;
+  border: 1px solid black;
+  border-radius: 3px;
+  padding: 5px 20px;
+
+  display: flex;
+  font-size: 25px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.your-score-value {
+  margin-left: 10px;
+}
+
+.submit-button {
+  cursor: pointer;
+  text-indent: -99999px;
+  background: transparent url("../assets/SubmitButton.png") no-repeat;
+  border: none;
+  height: 47px;
+  width: 142px;
+  margin-top: 40px;
+}
+
+.details-container {
+  width: fit-content;
+  height: fit-content;
+  position: absolute;
+  padding: 20px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.details {
+  width: fit-content;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
+  color: white;
+  background-color: #429058;
+  border: 1px solid black;
+  border-radius: 3px;
+}
+
+.details-form {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  align-items: center;
+  color: black;
+}
+
+.name-field,
+.email-field {
+  padding: 15px 10px;
+  width: 300px;
+  text-align: center;
+  margin: 10px;
+  border: 1px solid black;
+  border-radius: 3px;
+}
+
+.name-field:focus,
+.email-field:focus {
+  outline: none;
+}
+
+.details h1 {
+  font-size: 50px;
+  text-transform: uppercase;
+}
+
+.restart-button-details {
+  margin-top: 80px;
+}
+
+.how-to-play-container {
+  width: fit-content;
+  height: fit-content;
+  position: absolute;
+  padding: 20px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.how-to-play {
+  width: fit-content;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
+  color: white;
+}
+
+.how-to-play h1 {
+  color: white;
+  font-weight: bold;
+}
+
+.how-play-image {
+  height: 400px;
+  width: 380px;
+  background-image: url("../assets/howtoplay1.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.button-container {
+  margin-top: -80px;
+}
+.button-container input {
+  margin: 10px;
+}
+
+.back-button {
+  margin-top: 50px;
+}
+
+.back-button:focus {
+  outline: none;
 }
