--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -46,31 +46,10 @@ body {
 }
 
 .obstacle {
-  background-image: url("../assets/obstacle/DragonGIF.gif");
-  height: 160px;
+  height: 80px;
   width: 80px;
+  background-repeat: no-repeat;
   position: absolute;
-}
-
-.topObstacle {
-  background-image: url("../assets/obstacle/DragonGIF.gif");
-  height: 160px;
-  width: 80px;
-  position: absolute;
-}
-
-.instruction {
-  margin-top: 50px;
-  color: white;
-  text-align: center;
-}
-
-.instruction p {
-  font-size: 20px;
-}
-
-.instruction h1 {
-  text-transform: uppercase;
 }
 
 .info-container {
@@ -130,4 +109,18 @@ body {
   background-color: greenyellow;
   border: none;
   padding: 25px;
+}
+
+.top-projectile {
+  background-image: url("../assets/obstacle/Fireball.gif");
+  position: absolute;
+  height: 21px;
+  width: 27px;
+}
+
+.bottom-projectile {
+  background-image: url("../assets/obstacle/Ball.png");
+  position: absolute;
+  width: 20px;
+  height: 21px;
 }
