game and menu updated

--- a/views/scoreBoard.ejs
+++ b/views/scoreBoard.ejs
@@ -30,6 +30,7 @@
           type="image"
           src="/assets/RestartButton.png"
           class="restart-button"
+          onclick="window.location.replace('/game')"
         />
       </div>
     </main>
