--- a/views/game.ejs
+++ b/views/game.ejs
@@ -9,19 +9,21 @@
     
   </head>
   <body>
-    <div class="info-container">
-      <div class="info">
-        <div class="timer">
-          <p>Timer :</p>
-          <p class="timer-text"></p>
-        </div>
-        <div class="score">
-          <p>Score :</p>
-          <p class="score-text"></p>
+    
+    
+    <div class="game-box">
+      <div class="info-container">
+        <div class="info">
+          <div class="timer">
+            <p>Timer :</p>
+            <p class="timer-text">30</p>
+          </div>
+          <div class="score">
+            <p>Score :</p>
+            <p class="score-text">30</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="game-box">
       <div class="game-container">
         <div class="sky">
           <div class="bird"></div>
