--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700");
+@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
 
 * {
   box-sizing: border-box;
@@ -7,7 +7,7 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Press Start 2P", cursive;
   background-image: url("../assets/JoxxerBG.png");
 }
 
@@ -89,7 +89,7 @@ td {
 }
 
 .your-score {
-  width: 250px;
+  width: fit-content;
   background-color: #429058;
   margin-top: 20px;
   border: 1px solid black;
