minor updated done

--- a/views/details.ejs
+++ b/views/details.ejs
@@ -12,12 +12,14 @@
               placeholder="Enter your name"
               name="name"
               class="name-field"
+              required
             />
             <input
               type="email"
               placeholder="Enter your email address"
               name="email"
               class="email-field"
+              required
             />
             <input type="hidden" name="score" value="<%= score %> " />
             <input type="submit" class="submit-button" />
