--- a/views/details.ejs
+++ b/views/details.ejs
@@ -5,7 +5,7 @@
 <body> 
     <main class="details-container">
         <div class="details">
-          <h1>Congratulations!</h1>
+          <p>Congratulations!</p>
           <form class="details-form" method="POST" action="/details/player-details">
             <input
               type="text"
@@ -28,7 +28,7 @@
             type="image"
             src="/assets/RestartButton.png"
             class="restart-button-details"
-            onclick="window.location.replace('/game')"
+            onclick="window.location.replace('/')"
           />
         </div>
       </main>
