--- a/views/game.ejs
+++ b/views/game.ejs
@@ -9,8 +9,6 @@
     
   </head>
   <body>
-    
-    
     <div class="game-box">
       <div class="info-container">
         <div class="info">
@@ -25,11 +23,12 @@
         </div>
       </div>
       <div class="game-container">
-        <div class="sky">
-          <div class="bird"></div>
-        </div>
+        <div class="sky"></div>
+        <div class="bird"></div>
       </div>
-      <div class="ground-container"></div>
+      <div class="ground-container">
+        <div class="ground"></div>
+      </div>
     </div>
   </body>
 </html>
