--- a/views/scoreBoard.ejs
+++ b/views/scoreBoard.ejs
@@ -32,7 +32,7 @@
           type="image"
           src="/assets/RestartButton.png"
           class="restart-button"
-          onclick="window.location.replace('/game')"
+          onclick="window.location.replace('/')"
         />
       </div>
     </main>
