--- a/views/details.ejs
+++ b/views/details.ejs
@@ -21,6 +21,9 @@
               class="email-field"
               required
             />
+            <div class="yourScore">
+              <p>your score is :</p><p><%= score %> </p>
+            </div>
             <input type="hidden" name="score" value="<%= score %> " />
             <input type="submit" class="submit-button" />
           </form>
