--- a/views/game.ejs
+++ b/views/game.ejs
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div class="game-box">
+      <div class="startGameTimer"><p class="startGameTimerText">3</p></div>
       <div class="info-container">
         <div class="info">
           <div class="timer">
