--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,7 +4,11 @@ body {
   font-family: "Press Start 2P", cursive;
 }
 .game-box {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
   position: absolute;
   top: 50%;
@@ -25,12 +29,30 @@ body {
   }
 }
 
+@-webkit-keyframes slide {
+  0% {
+    transform: translate3d(0, 0, 0);
+  }
+  100% {
+    transform: translate3d(-4915px, 0, 0);
+  }
+}
+
 @keyframes slide {
   0% {
     transform: translate3d(0, 0, 0);
   }
   100% {
     transform: translate3d(-4915px, 0, 0);
+  }
+}
+
+@-webkit-keyframes groundslide {
+  0% {
+    transform: translate3d(0, 0, 0);
+  }
+  100% {
+    transform: translate3d(-348px, 0, 0);
   }
 }
 
@@ -53,6 +75,7 @@ body {
   background-repeat: repeat-x;
   height: 480px;
   width: 14750px;
+  -webkit-animation: slide 100s linear infinite;
   animation: slide 100s linear infinite;
 }
 .ground-container {
@@ -65,6 +88,7 @@ body {
   background-repeat: repeat-x;
   height: 62px;
   width: 1044px;
+  -webkit-animation: groundslide 8s linear infinite;
   animation: groundslide 8s linear infinite;
 }
 
