--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -78,6 +78,12 @@ body {
   /* -webkit-animation: slide 100s linear infinite;
   animation: slide 100s linear infinite; */
 }
+@media only screen and (max-width: 740) {
+  .game-box {
+    transform: translate(-50%, -40%);
+  }
+}
+
 .ground-container {
   overflow: hidden;
   width: 348px;
