--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -1,4 +1,6 @@
 <%- include('includes/head.ejs')  %>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+
 </head>
 
 <body>
@@ -23,6 +25,21 @@
             onclick="window.location.replace('/how-to-play')"
           />
         </div>
+
+        <div class="share-btn-container" >
+          <a href="#" class="facebook-btn">
+            <i class="fab fa-facebook"></i>
+          </a>
+          <a href="#" class="twitter-btn">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="#" class="whatsapp-btn">
+            <i class="fab fa-whatsapp"></i>
+          </a>
+         
+        </div>
       </main>
+
+      <script src="/js/social.js"></script>
     
 <%- include('includes/end.ejs') %> 
