--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -1,5 +1,4 @@
 <%- include('includes/head.ejs')  %>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
 
 </head>
 
@@ -28,13 +27,13 @@
 
         <div class="share-btn-container" >
           <a href="#" class="facebook-btn">
-            <i class="fab fa-facebook"></i>
+            <img src="/assets/fb.png" alt="">
           </a>
           <a href="#" class="twitter-btn">
-            <i class="fab fa-twitter"></i>
+            <img src="/assets/Twitter.png" alt="">
           </a>
           <a href="#" class="whatsapp-btn">
-            <i class="fab fa-whatsapp"></i>
+            <img src="/assets/WhatsApp.png" alt="">
           </a>
          
         </div>
