--- a/public/css/main.css
+++ b/public/css/main.css
@@ -271,13 +271,16 @@ td {
 }
 
 .share-btn-container {
-  display: flex;
+  background-image: url("../assets/ShareTab.png");
+  background-repeat: no-repeat;
+  background-size: contain;
   width: 300px;
+  height: 100px;
+  display: flex;
   padding: 10px;
   justify-content: space-around;
-  background-color: #153c4a;
-  border: 3px solid white;
-  border-radius: 50px;
+  align-items: center;
+
   margin-top: 30px;
 }
 
