--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -27,7 +27,7 @@
 
         <div class="share-btn-container" >
           <a href="#" class="facebook-btn">
-            <img src="/assets/fb.png" alt="">
+            <img src="/assets/Fb.png" alt="">
           </a>
           <a href="#" class="twitter-btn">
             <img src="/assets/Twitter.png" alt="">
