--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,7 +8,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: "Press Start 2P", cursive;
-  background-image: url("../assets/JoxxerBG.png");
+  background-image: url("../assets/optmised.jpg");
 }
 
 .menu-container {
