--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
 body {
-  background-image: url("../assets/optmised.jpg");
+  background-image: url("../assets/SecondOptimised.jpg");
   font-family: "Press Start 2P", cursive;
 }
 .game-box {
