--- a/views/details.ejs
+++ b/views/details.ejs
@@ -27,6 +27,7 @@
             <input type="hidden" name="score" value="<%= score %> " />
             <input type="submit" class="submit-button" />
           </form>
+          <img src="/assets/FolkPersonCheering.gif" alt="girl" class="girl-image" >
           <input
             type="image"
             src="/assets/RestartButton.png"
