--- a/views/game.ejs
+++ b/views/game.ejs
@@ -18,6 +18,8 @@
             <p>Timer :</p>
             <p class="timer-text">60</p>
           </div>
+    <img  class="audioButton" onclick="muteControl()" >
+
           <div class="score">
             <p>Score :</p>
             <p class="score-text">0</p>
@@ -32,5 +34,6 @@
         <div class="ground"></div>
       </div>
     </div>
+
   </body>
 </html>
