--- a/views/game.ejs
+++ b/views/game.ejs
@@ -18,7 +18,7 @@
             <p>Timer :</p>
             <p class="timer-text">60</p>
           </div>
-    <img  class="audioButton" onclick="muteControl()" >
+    <div class="audioButton" onclick="muteControl()"></div>
 
           <div class="score">
             <p>Score :</p>
